added sidebar for image. placed <h1> and <h2> in <header>. Reduced body to one paragraph

--- a/index.html
+++ b/index.html
@@ -6,36 +6,42 @@
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1 class="heading">About Me</h1>
-        <h2 class="heading">A Brief Description of Ben Governali</h2>
-        <!--<img src="images/holiday-party-photo.jpg" alt="A photo of Ben Governali wearing a festive sweater and holiding a bottle of wine">-->
-        <p class = firstP>
-            <img src="images/holiday-party-photo.jpg" alt="A photo of Ben Governali wearing a festive sweater and holiding a bottle of wine">
-            I was born on the 25th of August 1993 to Christopher and Sharon Governali. 
-            I have two siblings: my older sister Victoria, and my younger brother Raphael. 
-            For the first ten years of my life we lived in Queens, NY. 
-            My mother worked as a High School English teacher and my father freelanced in security system installations.
-            Like many kids at the time I got into video games. Pokemon was my introduction to video games and it quickly expanded from there.
-            My introduction to music came when I entered 3rd grade. 
-            I chose to learn clarinet. Ididn't know much about music at the time and squidward played clarinet so I figured why not.
-            Just before turning ten, my family moved to Somers NY, a small town in northern Westchester. 
-        </p>
-        <p>When we moved to Somers I quickly made new friends. We moved in the beginning of summer so we had time to become familiar with the town before heading back to school.
-            Over the years I would take on new instruments and hobbies. I went paintballing with a few friends of mine and fell in love immediately.
-            I also got into airsoft for a little while. I eventually replaced clarinet with saxophone, then attempted trumpet, but none of these stuck for long.
-            At some point I discovered my dad's copy of "How the West Was Won" - a live album by Led Zeppelin. This was my first introduction to music and what eventually moved me to take up guitar.
-            I formed a band in high school, and while we were by no means good, it was a fun way to hang out and eat disgusting amounts of pizza.
-            I also joined the boy scouts part way into high school. Most of my friends were already in one of the local troops. This was my introduction to outing activites.
-            Camping quickly became one of my favorite activites and it is something I still enjoy to this day.
-        </p>
-        <p>After high school I studied Mechanical Engineering at Rensselaer Polytechnic Institute. 
-            It was there that I became exposed to programming and begun to take an interest in it. 
-            Upon graduating I began my career in the Aerospace Industry working an Assembly/Test Engineer for a commercial jet engine manufacturer.
-            After a few years of this I began to feel that this wasn't the career path I wanted to follow.
-            I began teaching myself some front end development in my spare time and decided to apply for a bootcamp.
-            I'm excited to see where it will take me.
-        </p>
-        <p class="lastP">These days I like to spend my free time noodling on the guitar, playing video games, going for some light hikes, and going to as many concerts as I can.
-        </p>
+        <header class="heading">
+            <h1>About Me</h1>
+            <h2>A Brief Description of Ben Governali</h2>
+        </header>
+        <main>
+            <p>
+                <!--<img src="images/holiday-party-photo.jpg" alt="A photo of Ben Governali wearing a festive sweater and holiding a bottle of wine">-->
+                I was born on the 25th of August 1993 to Christopher and Sharon Governali. 
+                I have two siblings: my older sister Victoria, and my younger brother Raphael. 
+                For the first ten years of my life we lived in Queens, NY. 
+                My mother worked as a High School English teacher and my father freelanced in security system installations.
+                Like many kids at the time I got into video games. Pokemon was my introduction to video games and it quickly expanded from there.
+                My introduction to music came when I entered 3rd grade. 
+                I chose to learn clarinet. Ididn't know much about music at the time and squidward played clarinet so I figured why not.
+                Just before turning ten, my family moved to Somers NY, a small town in northern Westchester. 
+                <br><br>
+                When we moved to Somers I quickly made new friends. We moved in the beginning of summer so we had time to become familiar with the town before heading back to school.
+                Over the years I would take on new instruments and hobbies. I went paintballing with a few friends of mine and fell in love immediately.
+                I also got into airsoft for a little while. I eventually replaced clarinet with saxophone, then attempted trumpet, but none of these stuck for long.
+                At some point I discovered my dad's copy of "How the West Was Won" - a live album by Led Zeppelin. This was my first introduction to music and what eventually moved me to take up guitar.
+                I formed a band in high school, and while we were by no means good, it was a fun way to hang out and eat disgusting amounts of pizza.
+                I also joined the boy scouts part way into high school. Most of my friends were already in one of the local troops. This was my introduction to outing activites.
+                Camping quickly became one of my favorite activites and it is something I still enjoy to this day.
+                <br><br>
+                After high school I studied Mechanical Engineering at Rensselaer Polytechnic Institute. 
+                It was there that I became exposed to programming and begun to take an interest in it. 
+                Upon graduating I began my career in the Aerospace Industry working an Assembly/Test Engineer for a commercial jet engine manufacturer.
+                After a few years of this I began to feel that this wasn't the career path I wanted to follow.
+                I began teaching myself some front end development in my spare time and decided to apply for a bootcamp.
+                I'm excited to see where it will take me.
+                <br><br>
+                These days I like to spend my free time noodling on the guitar, playing video games, going for some light hikes, and going to as many concerts as I can.
+            </p>
+            <aside class="sidebar">
+                <img src="images/holiday-party-photo.jpg" alt="A photo of Ben Governali wearing a festive sweater and holiding a bottle of wine">
+            </aside>
+        </main>
     </body>
 </html>
